k8s/init-app/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic

---

apiVersion: v1
kind: Namespace
metadata:
  name: wavefront
