k8s/init-app/ingress.avi.yaml
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hacknp
  labels:
    gslb: "yes"
spec:
  ingressClassName: avi-lb
  tls:
  - hosts:
      - miuser01.tkgsingress.livefire.lab
    secretName: bs1-tls
  rules:
  - host: miuser01.tkgsingress.livefire.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
